--- a/style.css
+++ b/style.css
@@ -20,11 +20,7 @@ body {
     background-color: #e4e4e4;
 }
 
-#main-container.hidden {
-    display: none;
-}
-
-#main-container.visible {
+#main-container {
     background-color: white;
 
     padding: 60px;
@@ -56,7 +52,7 @@ body {
     gap: 15px;
 }
 
-.game-title img {
+.game-title svg {
     height: 50px;
     width: 50px;
 }
@@ -77,11 +73,16 @@ input {
     border: 2px solid #efefef;
     border-radius: 5px;
 
-    transition: scale 0.1s ease-in-out;
+    transition: transform 0.1s ease-in-out;
 }
 
 input:hover {
-    scale: 1.06;
+    transform: scale(1.1);
+}
+
+input:focus {
+    outline: none;
+    display: flex;
 }
 
 .actions {
