--- a/style.css
+++ b/style.css
@@ -142,3 +142,66 @@ input:focus {
 
     fill: white;
 }
+
+@media (max-width: 1024px) {
+
+    body {
+        padding: 10px;
+    }
+
+    #main-container {
+        grid-template-columns: repeat(5, 15vw);
+        grid-template-rows: auto auto 15vw 17px;
+        gap: 5px;
+
+        border-radius: 10px;
+    
+        justify-items: center;
+        align-items: center;
+
+        padding: 30px;
+    }
+
+    .game-title {
+        font-weight: 600;
+        font-size: 20px;
+
+        display: flex;
+        align-items: end;
+        gap: 5px;
+    }
+
+    .game-title svg {
+        height: 30px;
+        width: 30px;
+    }
+
+    input {
+        font-size: 30px;
+        border: 1px solid #efefef;
+        border-radius: 2px;
+    }
+
+    .actions {
+        justify-content: space-between;
+    }
+
+    .actions button {
+        height: 30px;
+        
+        border-radius: 2px;
+       
+        font-size: 10px;    
+    }
+
+    .symbol-indicator {
+        padding: 2px 0  2px 0;
+    }
+
+    .symbol-indicator svg {
+        height: 15px;
+        width: 15px;
+    
+        fill: white;
+    }
+}
