Add will-change property for better animation performance

--- a/style.css
+++ b/style.css
@@ -73,6 +73,8 @@ input {
     border: 2px solid #efefef;
     border-radius: 5px;
 
+    will-change: transform;
+
     transition: transform 0.1s ease-in-out;
 }
 
